# devvault

./: README.md  pyproject.toml
data/: vault.json
devvault/: cli.py  db.py  executor.py  models.py  utils.py
tests/: __init__.py  conftest.py  test_cli.py  test_db.py  test_executor.py  test_models.py  test_utils.py
