[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devvault"
version = "0.1.0"
description = "Local-first knowledge base CLI for storing and executing knowledge artifacts"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Developer"}
]
dependencies = [
    "click>=8.0",
    "tinydb>=4.0",
    "requests>=2.25",
    "rich>=13.0",
]

[project.scripts]
devvault = "devvault.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "responses>=0.23",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["devvault"]
omit = ["tests/*"]

[tool.setuptools.packages.find]
where = ["."]
